# grok-switcher

./: .gitignore  README.md  REVIEW.md  SPEC.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  billing.rs  commands.rs  error.rs  lib.rs  login.rs  main.rs  paths.rs  settings.rs  store.rs  token_refresh.rs  types.rs  update.rs
src/components/: UpdateChecker.tsx
