[package]
name = "grok-switcher"
version = "0.1.3"
description = "Multi-account switcher for Grok Build"
authors = ["phancd"]
edition = "2021"

[lib]
name = "grok_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
which = "7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
